--- a/src/modules/src/controller/Kbuild
+++ b/src/modules/src/controller/Kbuild
@@ -7,3 +7,6 @@ obj-y += controller_brescianini.o
 obj-y += position_controller_indi.o
 obj-y += position_controller_pid.o
 obj-y += controller_lee.o
+obj-y += controller_lqr.o
+obj-y += lqr_utils.o
+
